updated forked version

--- a/index.html
+++ b/index.html
@@ -2,13 +2,16 @@
 <html>
   <head>
     <link rel="stylesheet" href="styles.css" />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Euphoria+Script&family=Great+Vibes&display=swap" rel="stylesheet">
   </head>
   <body>
     <header>
         <img src = "assets/lab-assets/small-logo.png">
     <div class = "logo">
-           <h3>Delicious</h3>
-        <p>best food blog on the web</p>
+           <!-- <h3>Delicious</h3> -->
+        <p>Delicious<br>
+            best food blog on the web</p>
     </div> 
     <div class = "logos2"> 
         
@@ -21,44 +24,62 @@
         <img src = "assets/lab-assets/rss-icon.png">
         <img src = "assets/lab-assets/mail-icon.png">
     </div>
-
+        <hr class = "hr">
     </header>
     <main>
     <section>
-        <div class = "logo">
-        <h3>Chocolate Pizza</h3>
-        <p>Posted On 15 Dec 2013 / DESSERTS</p>
+        <div class = "pizza">
+        <!-- <h3>Chocolate Pizza</h3> -->
+        <p>Chocolate Pizza<br> Posted On 15 Dec 2013 / DESSERTS</p>
     </div>
         <img src = "assets/lab-assets/choco-pizza.png">
 
-        <p> is your job to create a page that looks exactly like the preview below. Within your GitHub class repo, under today’s directory, you will find all of the assets required to accomplish this task in addition to a larger version of this preview image.</p>
-        <p>is your job to create a page that looks exactly like the preview below. Within your GitHub class repo, under today’s directory, you will find all of the assets required to accomplish this task in addition to a larger version of this preview image.</p>
-        <p>is your job to create a page that looks exactly like the preview below. Within your GitHub class repo, under today’s directory, you will find all of the assets required to accomplish this task in addition to a larger version of this preview image.</p>
-           
+    <div class = "text">
+        <p>For the fig-swirl: Melt butter over medium heat in a saucepan. Add brown sugar and stir to dissolve. Halve all of the figs and toss in the saucepan with water and lemon juice. Cook over medium hear, stirring frequently, until you have a chunky-jammy mixture. Add salt withy one or two stirs, set aside and let cool completely.</p>
+        <p>Ice cream: In a small pot over medium hear, combine milk, and granulated sugar until sugar is completely dissolved and the milk is just barely lukewarm. Whisk in the egg yolks. Set mixture in the fridge and wait until the fig mixture is cooled.</p>
+        <p>Using an ice cream machine, pour liquids into the frozen basin and process according to manufacturer instructions, i.e., let spin and thicken for 20 minutes before adding mascarpone, fig jam mixture, and the nuts. Continue to process for +/- 10 minutes. Pour semi-frozen mixture into a pyrex dish or glass tupperware. Freeze for at least two hours before serving.</p>
+    </div>
+
     </section>      
     <section>
+
         <div class = "ingredients">
         <ul>
-            <li>item 1</li>
-            <li>item 2</li>
-            <li>item 3</li>
-            <li>item 4</li>
-            <li>item 5</li>
-            <li>item 6</li>
+            <li>1 1/2 cups milk</li>
+            <li>1/2 cup mascarpone</li>
+            <li>1/2 tsp pink salt</li>
+            <li>1lb Black Mission Figs</li>
+            <li>1/2 cup brown sugar</li>
+            <li>1-4 tbsp water</li>
         </ul>
         <ul>
-            <li>item 7</li>
-            <li>item 8</li>
-            <li>item 9</li>
-            <li>item 10</li>
-            <li>item 11</li>
-            <li>item 12</li>
+            <li>1 1/2 cups heavy cream</li>
+            <li><s>1/3 granulated sugar</s></li>
+            <li><s>2 egg yolks</s></li>
+            <li>1 lemon, juiced</li>
+            <li>2 tbsp butter</li>
+            <li>1 cup honey roasted pecans, roughly chopped</li>
         </ul>
         </div>
     </section> 
+    <hr class = "hr">
+    <img src = "assets/lab-assets/van-pic.png">
+    <div class = "bio">
+    <h3>
+        Vanessa Stevenson
+    </h3>
+    <p>
+    Food enthusiast, photography fan. Add a pinch of raw foodism and that's pretty much who I am.
+    </p>
+    </div>
+
+    <div class = "button">
+        <button>SHARE RECIPE</button>
+    </div>
+
     </main>
     <footer>
-        <img src = "assets/lab-assets/van-pic.png">
+
     </footer>
   </body>
  
